--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:studio": "npx drizzle-kit studio",
     "db:push": "npx drizzle-kit push:pg",
-    "db:seed": "tsx ./scripts/seed.ts"
+    "db:seed": "tsx ./scripts/seed.ts",
+    "db:reset": "tsx ./scripts/reset.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.0",
@@ -24,7 +25,9 @@
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "ra-data-simple-rest": "^5.8.0",
     "react": "^19.0.0",
+    "react-admin": "^5.8.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
